--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "lodash": "^4.17.20",
+    "ngx-smart-modal": "^7.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uid": "^1.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
